updated html list links in index.html

--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="list-group">
-                    <a href="numpy/numpy_basics.html" class="list-group-item list-group-item-action">NumPy → NumPy Basics</a>
-                    <a href="pandas/pandas_intro.html" class="list-group-item list-group-item-action">Pandas → Pandas Introduction</a>
-                    <a href="flask/flask_setup.html" class="list-group-item list-group-item-action">Flask → Flask Setup</a>
-                    <a href="ml/linear_regression.html" class="list-group-item list-group-item-action">Machine Learning → Linear Regression</a>
-                    <!-- Add more links as needed -->
+                    <a href="html/Terminal/Command_line_dark.html" class="list-group-item list-group-item-action">Command Line → Fundamental Commands</a>
+                    <a href="html/Terminal/github_terminal_dark.html" class="list-group-item list-group-item-action">Command line → GitHub & Git in the Terminal</a>
                 </div>
             </div>
         </div>
