--- a/html/Terminal/Command_line_dark.html
+++ b/html/Terminal/Command_line_dark.html
@@ -13080,7 +13080,7 @@ div#notebook {
     }
     init_mathjax();
     </script>
-<!-- End of mathjax configuration --><link rel="stylesheet" type="text/css" href="dark_theme.css"></head>
+<!-- End of mathjax configuration --><link rel="stylesheet" type="text/css" href="../../dark_theme.css"></head>
 <body>
 <main>
 <div class="border-box-sizing" id="notebook" tabindex="-1">
