--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="col-md-8">
                 <div class="list-group">
                     <a href="notebooks/Terminal/Terminal.html" class="list-group-item list-group-item-action">Command Line → Fundamental Commands</a>
-                    <a href="https://brolo231.github.io/Learning-Notebooks/notebooks/Terminal/GitHub_Terminal.html" class="list-group-item list-group-item-action">Command line → GitHub & Git in the Terminal</a>
+                    <a href="notebooks/Terminal/GitHub_Terminal.html" class="list-group-item list-group-item-action">Command line → GitHub & Git in the Terminal</a>
                 </div>
             </div>
         </div>
