created machine learning topic with numpy

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <h2 class="mt-4">notebooks</h2>
 <div class="list-group">
 </div>
+<h2 class="mt-4">Machine Learning</h2>
+<div class="list-group">
+    <a href="notebooks/Machine Learning/NumPy.html" class="list-group-item list-group-item-action">Machine Learning → NumPy</a>
+</div>
 <h2 class="mt-4">Terminal</h2>
 <div class="list-group">
     <a href="notebooks/Terminal/GitHub_Terminal.html" class="list-group-item list-group-item-action">Terminal → GitHub Terminal</a>
