added pandas and pandas exercises

--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
 </div>
 <h2 class="mt-4">Machine Learning</h2>
 <div class="list-group">
+    <a href="notebooks/Machine Learning/Pandas.html" class="list-group-item list-group-item-action">Machine Learning → Pandas</a>
     <a href="notebooks/Machine Learning/NumPy.html" class="list-group-item list-group-item-action">Machine Learning → NumPy</a>
+</div>
+<h2 class="mt-4">z_Exercsies</h2>
+<div class="list-group">
+</div>
+<h2 class="mt-4">Pandas</h2>
+<div class="list-group">
+    <a href="notebooks/z_Exercsies/Pandas/Pandas (Basic Data analysis).html" class="list-group-item list-group-item-action">Pandas → Pandas (Basic Data analysis)</a>
 </div>
 <h2 class="mt-4">Terminal</h2>
 <div class="list-group">
