updating file names

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 </div>
 <h2 class="mt-4">z_Exercsies</h2>
 <div class="list-group">
+    <a href="notebooks/z_Exercsies/Pandas (Basic Data analysis).html" class="list-group-item list-group-item-action">z_Exercsies → Pandas (Basic Data analysis)</a>
 </div>
 <h2 class="mt-4">Pandas</h2>
 <div class="list-group">
-    <a href="notebooks/z_Exercsies/Pandas/Pandas (Basic Data analysis).html" class="list-group-item list-group-item-action">Pandas → Pandas (Basic Data analysis)</a>
 </div>
 <h2 class="mt-4">Terminal</h2>
 <div class="list-group">
