--- a/index.html
+++ b/index.html
@@ -18,20 +18,16 @@
 <h2 class="mt-4">Machine Learning</h2>
 <div class="list-group">
     <a href="notebooks/Machine Learning/2.Pandas.html" class="list-group-item list-group-item-action">Machine Learning → 2.Pandas</a>
-    <a href="notebooks/Machine Learning/Pandas.html" class="list-group-item list-group-item-action">Machine Learning → Pandas</a>
     <a href="notebooks/Machine Learning/1.NumPy.html" class="list-group-item list-group-item-action">Machine Learning → 1.NumPy</a>
-    <a href="notebooks/Machine Learning/NumPy.html" class="list-group-item list-group-item-action">Machine Learning → NumPy</a>
-</div>
-<h2 class="mt-4">Z-Exercsies</h2>
-<div class="list-group">
-    <a href="notebooks/Z-Exercsies/Pandas (Basic Data analysis).html" class="list-group-item list-group-item-action">Z-Exercsies → Pandas (Basic Data analysis)</a>
 </div>
 <h2 class="mt-4">Terminal</h2>
 <div class="list-group">
-    <a href="notebooks/Terminal/GitHub_Terminal.html" class="list-group-item list-group-item-action">Terminal → GitHub Terminal</a>
-    <a href="notebooks/Terminal/Terminal.html" class="list-group-item list-group-item-action">Terminal → Terminal</a>
     <a href="notebooks/Terminal/1.Terminal.html" class="list-group-item list-group-item-action">Terminal → 1.Terminal</a>
     <a href="notebooks/Terminal/2.GitHub_Terminal.html" class="list-group-item list-group-item-action">Terminal → 2.GitHub Terminal</a>
+</div>
+<h2 class="mt-4">Zexercses</h2>
+<div class="list-group">
+    <a href="notebooks/Zexercses/Pandas (Basic Data analysis).html" class="list-group-item list-group-item-action">Zexercses → Pandas (Basic Data analysis)</a>
 </div>
 
             </div>
