added python learning notebooks

--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
     <a href="notebooks/Terminal/1.Terminal.html" class="list-group-item list-group-item-action">Terminal → 1.Terminal</a>
     <a href="notebooks/Terminal/2.GitHub_Terminal.html" class="list-group-item list-group-item-action">Terminal → 2.GitHub Terminal</a>
 </div>
-<h2 class="mt-4">Zexercses</h2>
+<h2 class="mt-4">Zexercises</h2>
 <div class="list-group">
-    <a href="notebooks/Zexercses/Pandas (Basic Data analysis).html" class="list-group-item list-group-item-action">Zexercses → Pandas (Basic Data analysis)</a>
+    <a href="notebooks/Zexercises/Pandas (Basic Data analysis).html" class="list-group-item list-group-item-action">Zexercises → Pandas (Basic Data analysis)</a>
+</div>
+<h2 class="mt-4">Zexercises - Answered</h2>
+<div class="list-group">
+    <a href="notebooks/Zexercises - Answered/Pandas (Basic Data analysis).html" class="list-group-item list-group-item-action">Zexercises - Answered → Pandas (Basic Data analysis)</a>
 </div>
 
             </div>
