added html for python learning notebooks

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <a href="notebooks/Machine Learning/2.Pandas.html" class="list-group-item list-group-item-action">Machine Learning → 2.Pandas</a>
     <a href="notebooks/Machine Learning/1.NumPy.html" class="list-group-item list-group-item-action">Machine Learning → 1.NumPy</a>
 </div>
+<h2 class="mt-4">Python</h2>
+<div class="list-group">
+    <a href="notebooks/Python/001Python_Data_Structures.html" class="list-group-item list-group-item-action">Python → 001Python Data Structures</a>
+</div>
 <h2 class="mt-4">Terminal</h2>
 <div class="list-group">
     <a href="notebooks/Terminal/1.Terminal.html" class="list-group-item list-group-item-action">Terminal → 1.Terminal</a>
