--- a/notebooks/Machine Learning/2.Pandas.html
+++ b/notebooks/Machine Learning/2.Pandas.html
@@ -7533,7 +7533,7 @@ a.anchor-link {
 <li><a href="#3">Basic Data Operations</a></li>
 <li><a href="#4">Data Cleaning</a></li>
 <li><a href="#5">Basic Data Analysis</a></li>
-<li><a href="#6">Advanced Data operations</a></li>
+<li><a href="#6">Conditional Selections</a></li>
 <li><a href="#7">Data Transformation</a></li>
 </ol>
 </div>
@@ -8024,7 +8024,7 @@ dtype: int64
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p id="6"></p>
-<h2 id="6.-Advanced-Data-Operations">6. Advanced Data Operations<a class="anchor-link" href="#6.-Advanced-Data-Operations">¶</a></h2><p>This involves selections and filtering techniques.</p>
+<h2 id="6.-Conditional-Selections">6. Conditional Selections<a class="anchor-link" href="#6.-Conditional-Selections">¶</a></h2><p>This involves selections and filtering techniques.</p>
 <p><strong>Conditional Selections</strong></p>
 </div>
 </div>
