--- a/index.html
+++ b/index.html
@@ -17,17 +17,22 @@
 </div>
 <h2 class="mt-4">Machine Learning</h2>
 <div class="list-group">
-    <a href="notebooks/Machine Learning/2.Pandas.html" class="list-group-item list-group-item-action">Machine Learning → 2.Pandas</a>
-    <a href="notebooks/Machine Learning/1.NumPy.html" class="list-group-item list-group-item-action">Machine Learning → 1.NumPy</a>
+    <a href="notebooks/Machine Learning/Pandas.html" class="list-group-item list-group-item-action">Machine Learning → Pandas</a>
+    <a href="notebooks/Machine Learning/NumPy.html" class="list-group-item list-group-item-action">Machine Learning → NumPy</a>
+</div>
+<h2 class="mt-4">C++</h2>
+<div class="list-group">
+    <a href="notebooks/C++/Fundamentals.html" class="list-group-item list-group-item-action">C++ → Fundamentals</a>
+    <a href="notebooks/C++/Intermediate.html" class="list-group-item list-group-item-action">C++ → Intermediate</a>
 </div>
 <h2 class="mt-4">Python</h2>
 <div class="list-group">
-    <a href="notebooks/Python/001Python_Data_Structures.html" class="list-group-item list-group-item-action">Python → 001Python Data Structures</a>
+    <a href="notebooks/Python/Python_Data_Structures.html" class="list-group-item list-group-item-action">Python → Python Data Structures</a>
 </div>
 <h2 class="mt-4">Terminal</h2>
 <div class="list-group">
-    <a href="notebooks/Terminal/1.Terminal.html" class="list-group-item list-group-item-action">Terminal → 1.Terminal</a>
-    <a href="notebooks/Terminal/2.GitHub_Terminal.html" class="list-group-item list-group-item-action">Terminal → 2.GitHub Terminal</a>
+    <a href="notebooks/Terminal/GitHub_Terminal.html" class="list-group-item list-group-item-action">Terminal → GitHub Terminal</a>
+    <a href="notebooks/Terminal/Terminal.html" class="list-group-item list-group-item-action">Terminal → Terminal</a>
 </div>
 <h2 class="mt-4">Zexercises</h2>
 <div class="list-group">
