ran convert_to_html on ipynb notebooks

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 </div>
 <h2 class="mt-4">C++</h2>
 <div class="list-group">
+    <a href="notebooks/C++/Running_CPP_on_ipynb.html" class="list-group-item list-group-item-action">C++ → Running CPP on ipynb</a>
     <a href="notebooks/C++/Fundamentals.html" class="list-group-item list-group-item-action">C++ → Fundamentals</a>
     <a href="notebooks/C++/Intermediate.html" class="list-group-item list-group-item-action">C++ → Intermediate</a>
 </div>
 <h2 class="mt-4">Python</h2>
 <div class="list-group">
+    <a href="notebooks/Python/Classes.html" class="list-group-item list-group-item-action">Python → Classes</a>
     <a href="notebooks/Python/Python_Data_Structures.html" class="list-group-item list-group-item-action">Python → Python Data Structures</a>
 </div>
 <h2 class="mt-4">Terminal</h2>
