trying to fix gitignore

--- a/index.html
+++ b/index.html
@@ -20,29 +20,18 @@
     <a href="notebooks/Machine Learning/Pandas.html" class="list-group-item list-group-item-action">Machine Learning → Pandas</a>
     <a href="notebooks/Machine Learning/NumPy.html" class="list-group-item list-group-item-action">Machine Learning → NumPy</a>
 </div>
-<h2 class="mt-4">C++</h2>
-<div class="list-group">
-    <a href="notebooks/C++/Running_CPP_on_ipynb.html" class="list-group-item list-group-item-action">C++ → Running CPP on ipynb</a>
-    <a href="notebooks/C++/Fundamentals.html" class="list-group-item list-group-item-action">C++ → Fundamentals</a>
-    <a href="notebooks/C++/Intermediate.html" class="list-group-item list-group-item-action">C++ → Intermediate</a>
-</div>
-<h2 class="mt-4">Python</h2>
-<div class="list-group">
-    <a href="notebooks/Python/Classes.html" class="list-group-item list-group-item-action">Python → Classes</a>
-    <a href="notebooks/Python/Python_Data_Structures.html" class="list-group-item list-group-item-action">Python → Python Data Structures</a>
-</div>
 <h2 class="mt-4">Terminal</h2>
 <div class="list-group">
     <a href="notebooks/Terminal/GitHub_Terminal.html" class="list-group-item list-group-item-action">Terminal → GitHub Terminal</a>
     <a href="notebooks/Terminal/Terminal.html" class="list-group-item list-group-item-action">Terminal → Terminal</a>
 </div>
-<h2 class="mt-4">Zexercises</h2>
+<h2 class="mt-4">Machine Learning Projects</h2>
 <div class="list-group">
-    <a href="notebooks/Zexercises/Pandas (Basic Data analysis).html" class="list-group-item list-group-item-action">Zexercises → Pandas (Basic Data analysis)</a>
+    <a href="notebooks/Machine Learning Projects/Apple_Music_Analyzer.html" class="list-group-item list-group-item-action">Machine Learning Projects → Apple Music Analyzer</a>
 </div>
-<h2 class="mt-4">Zexercises - Answered</h2>
+<h2 class="mt-4">SQL</h2>
 <div class="list-group">
-    <a href="notebooks/Zexercises - Answered/Pandas (Basic Data analysis).html" class="list-group-item list-group-item-action">Zexercises - Answered → Pandas (Basic Data analysis)</a>
+    <a href="notebooks/SQL/How_To_Run_SQL_in_IPYNB.html" class="list-group-item list-group-item-action">SQL → How To Run SQL in IPYNB</a>
 </div>
 
             </div>
