--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 </div>
 <h2 class="mt-4">Machine Learning</h2>
 <div class="list-group">
+    <a href="notebooks/Machine Learning/50_Numpy_Exercises.html" class="list-group-item list-group-item-action">Machine Learning → 50 Numpy Exercises</a>
+    <a href="notebooks/Machine Learning/linear_algebra_for_ds_ml.html" class="list-group-item list-group-item-action">Machine Learning → linear algebra for ds ml</a>
     <a href="notebooks/Machine Learning/Pandas.html" class="list-group-item list-group-item-action">Machine Learning → Pandas</a>
     <a href="notebooks/Machine Learning/NumPy.html" class="list-group-item list-group-item-action">Machine Learning → NumPy</a>
 </div>
@@ -24,6 +26,10 @@
 <div class="list-group">
     <a href="notebooks/Terminal/GitHub_Terminal.html" class="list-group-item list-group-item-action">Terminal → GitHub Terminal</a>
     <a href="notebooks/Terminal/Terminal.html" class="list-group-item list-group-item-action">Terminal → Terminal</a>
+</div>
+<h2 class="mt-4">Web Development</h2>
+<div class="list-group">
+    <a href="notebooks/Web Development/Flask_Simple_Web_App.html" class="list-group-item list-group-item-action">Web Development → Flask Simple Web App</a>
 </div>
 <h2 class="mt-4">Machine Learning Projects</h2>
 <div class="list-group">
