--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                             </h2>
                             <div id="collapseCategory1" class="accordion-collapse collapse" data-bs-parent="#accordion1">
                                 <div class="accordion-body list-group">
-            <a href="Machine Learning/linear_algebra.html" class="list-group-item list-group-item-action">linear algebra</a>
-<a href="Machine Learning/50_Numpy_Exercises.html" class="list-group-item list-group-item-action">50 Numpy Exercises</a>
-<a href="Machine Learning/linear_algebra_for_ds_ml.html" class="list-group-item list-group-item-action">linear algebra for ds ml</a>
-<a href="Machine Learning/Pandas.html" class="list-group-item list-group-item-action">Pandas</a>
-<a href="Machine Learning/matrix_transformations.html" class="list-group-item list-group-item-action">matrix transformations</a>
-<a href="Machine Learning/NumPy.html" class="list-group-item list-group-item-action">NumPy</a>
+            <a href="notebooks/Machine Learning/linear_algebra.html" class="list-group-item list-group-item-action">linear algebra</a>
+<a href="notebooks/Machine Learning/50_Numpy_Exercises.html" class="list-group-item list-group-item-action">50 Numpy Exercises</a>
+<a href="notebooks/Machine Learning/linear_algebra_for_ds_ml.html" class="list-group-item list-group-item-action">linear algebra for ds ml</a>
+<a href="notebooks/Machine Learning/Pandas.html" class="list-group-item list-group-item-action">Pandas</a>
+<a href="notebooks/Machine Learning/matrix_transformations.html" class="list-group-item list-group-item-action">matrix transformations</a>
+<a href="notebooks/Machine Learning/NumPy.html" class="list-group-item list-group-item-action">NumPy</a>
 
                                 </div>
                             </div>
@@ -57,8 +57,8 @@
                             </h2>
                             <div id="collapseCategory2" class="accordion-collapse collapse" data-bs-parent="#accordion2">
                                 <div class="accordion-body list-group">
-            <a href="Terminal/GitHub_Terminal.html" class="list-group-item list-group-item-action">GitHub Terminal</a>
-<a href="Terminal/Terminal.html" class="list-group-item list-group-item-action">Terminal</a>
+            <a href="notebooks/Terminal/GitHub_Terminal.html" class="list-group-item list-group-item-action">GitHub Terminal</a>
+<a href="notebooks/Terminal/Terminal.html" class="list-group-item list-group-item-action">Terminal</a>
 
                                 </div>
                             </div>
@@ -74,7 +74,7 @@
                             </h2>
                             <div id="collapseCategory3" class="accordion-collapse collapse" data-bs-parent="#accordion3">
                                 <div class="accordion-body list-group">
-            <a href="Web Development/Flask_Simple_Web_App.html" class="list-group-item list-group-item-action">Flask Simple Web App</a>
+            <a href="notebooks/Web Development/Flask_Simple_Web_App.html" class="list-group-item list-group-item-action">Flask Simple Web App</a>
 
                                 </div>
                             </div>
@@ -90,7 +90,7 @@
                             </h2>
                             <div id="collapseCategory4" class="accordion-collapse collapse" data-bs-parent="#accordion4">
                                 <div class="accordion-body list-group">
-            <a href="Machine Learning Projects/Apple_Music_Analyzer.html" class="list-group-item list-group-item-action">Apple Music Analyzer</a>
+            <a href="notebooks/Machine Learning Projects/Apple_Music_Analyzer.html" class="list-group-item list-group-item-action">Apple Music Analyzer</a>
 
                                 </div>
                             </div>
@@ -106,7 +106,7 @@
                             </h2>
                             <div id="collapseCategory5" class="accordion-collapse collapse" data-bs-parent="#accordion5">
                                 <div class="accordion-body list-group">
-            <a href="SQL/How_To_Run_SQL_in_IPYNB.html" class="list-group-item list-group-item-action">How To Run SQL in IPYNB</a>
+            <a href="notebooks/SQL/How_To_Run_SQL_in_IPYNB.html" class="list-group-item list-group-item-action">How To Run SQL in IPYNB</a>
 
                                 </div>
                             </div>
