--- a/index.html
+++ b/index.html
@@ -1,50 +1,92 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Learning Notes</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
-    <div class="container mt-5">
-        <h1 class="text-center mb-4">My Learning Notes</h1>
-        <p class="text-center">A collection of my structured learning notes.</p>
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-    <h2 class="mt-4">notebooks</h2>
-<div class="list-group">
+<!DOCTYPE html><html lang='en'><head>
+<meta charset='utf-8'><meta name='viewport' content='width=device-width,initial-scale=1'>
+<title>Learning Notebooks</title>
+<link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css' rel='stylesheet'>
+<style>
+body { background-color: #f8f9fa; font-family: 'Segoe UI', sans-serif; }
+h1 { font-weight: 700; font-size: 2.5rem; }
+summary { cursor: pointer; font-weight: 600; font-size: 1.1rem; padding: 5px 0; }
+details { margin-bottom: 1rem; background: #fff; border-radius: 8px; padding: 1rem; box-shadow: 0 4px 12px rgba(0,0,0,0.05); overflow: hidden; transition: all 0.3s ease; }
+.nested a { display: block; margin: 4px 0 4px 1.5rem; font-size: 0.95rem; color: #0d6efd; text-decoration: none; }
+.nested a:hover { text-decoration: underline; }
+a.home-link { font-size: 16px; font-weight: bold; margin-bottom: 1rem; display: inline-block; color: #0d6efd; }
+.container { max-width: 900px; margin: 0 auto; }
+summary { position: relative; list-style: none; }
+summary::after {
+  content: '▶';
+  font-size: 0.8rem;
+  position: absolute;
+  right: 0;
+  transition: transform 0.3s ease;
+}
+details[open] > summary::after {
+  transform: rotate(90deg);
+}
+details > *:not(summary) {
+  animation: fadeInSlide 0.3s ease;
+}
+@keyframes fadeInSlide {
+  from { opacity: 0; transform: translateY(-4px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+</style>
+</head><body><div class='container mt-5'>
+<h1 class='text-center mb-4'>Learning Notebooks</h1>
+<details class='mb-4'>
+<summary style='cursor:pointer; font-size:1.1rem; color: 45,45,45;'>📍 Data Scientist Roadmap</summary>
+<div style='margin-top:10px; text-align:center;'>
+<img src='data-science-roadmap.png' alt='Learning Banner' style='width:80%; max-width:800px; border-radius:5px;'>
 </div>
-<h2 class="mt-4">Machine Learning</h2>
-<div class="list-group">
-    <a href="notebooks/Machine Learning/linear_algebra.html" class="list-group-item list-group-item-action">Machine Learning → linear algebra</a>
-    <a href="notebooks/Machine Learning/50_Numpy_Exercises.html" class="list-group-item list-group-item-action">Machine Learning → 50 Numpy Exercises</a>
-    <a href="notebooks/Machine Learning/linear_algebra_for_ds_ml.html" class="list-group-item list-group-item-action">Machine Learning → linear algebra for ds ml</a>
-    <a href="notebooks/Machine Learning/Pandas.html" class="list-group-item list-group-item-action">Machine Learning → Pandas</a>
-    <a href="notebooks/Machine Learning/matrix_transformations.html" class="list-group-item list-group-item-action">Machine Learning → matrix transformations</a>
-    <a href="notebooks/Machine Learning/NumPy.html" class="list-group-item list-group-item-action">Machine Learning → NumPy</a>
+</details>
+<details>
+<summary>Data Science</summary>
+  <details>
+  <summary>Coding</summary>
+    <details>
+    <summary>NumPy</summary>
+<div class='nested'><a href='notebooks/Data Science/Coding/NumPy/50_Numpy_Exercises.html'target='_blank' rel='noopener noreferrer'>- 50 Numpy Exercises</a></div>
+<div class='nested'><a href='notebooks/Data Science/Coding/NumPy/NumPy.html'target='_blank' rel='noopener noreferrer'>- NumPy</a></div>
+    </details>
+<div class='nested'><a href='notebooks/Data Science/Coding/Pandas.html'target='_blank' rel='noopener noreferrer'>- Pandas</a></div>
+  </details>
+  <details>
+  <summary>Deep Learning</summary>
+  </details>
+  <details>
+  <summary>Econometrics</summary>
+  </details>
+  <details>
+  <summary>Exploratory Data Analysis</summary>
+  </details>
+  <details>
+  <summary>Machine Learning</summary>
+  </details>
+  <details>
+  <summary>Mathematics</summary>
+<div class='nested'><a href='notebooks/Data Science/Mathematics/Linear Algebra.html'target='_blank' rel='noopener noreferrer'>- Linear Algebra</a></div>
+<div class='nested'><a href='notebooks/Data Science/Mathematics/matrix_transformations.html'target='_blank' rel='noopener noreferrer'>- matrix transformations</a></div>
+  </details>
+  <details>
+  <summary>Statistics</summary>
+  </details>
+</details>
+<details>
+<summary>Machine Learning Projects</summary>
+<div class='nested'><a href='notebooks/Machine Learning Projects/Apple_Music_Analyzer.html'target='_blank' rel='noopener noreferrer'>- Apple Music Analyzer</a></div>
+</details>
+<details>
+<summary>SQL</summary>
+<div class='nested'><a href='notebooks/SQL/How_To_Run_SQL_in_IPYNB.html'target='_blank' rel='noopener noreferrer'>- How To Run SQL in IPYNB</a></div>
+</details>
+<details>
+<summary>Terminal</summary>
+<div class='nested'><a href='notebooks/Terminal/GitHub_Terminal.html'target='_blank' rel='noopener noreferrer'>- GitHub Terminal</a></div>
+<div class='nested'><a href='notebooks/Terminal/Terminal.html'target='_blank' rel='noopener noreferrer'>- Terminal</a></div>
+</details>
+<details>
+<summary>Web Development</summary>
+<div class='nested'><a href='notebooks/Web Development/Flask_Simple_Web_App.html'target='_blank' rel='noopener noreferrer'>- Flask Simple Web App</a></div>
+</details>
 </div>
-<h2 class="mt-4">Terminal</h2>
-<div class="list-group">
-    <a href="notebooks/Terminal/GitHub_Terminal.html" class="list-group-item list-group-item-action">Terminal → GitHub Terminal</a>
-    <a href="notebooks/Terminal/Terminal.html" class="list-group-item list-group-item-action">Terminal → Terminal</a>
-</div>
-<h2 class="mt-4">Web Development</h2>
-<div class="list-group">
-    <a href="notebooks/Web Development/Flask_Simple_Web_App.html" class="list-group-item list-group-item-action">Web Development → Flask Simple Web App</a>
-</div>
-<h2 class="mt-4">Machine Learning Projects</h2>
-<div class="list-group">
-    <a href="notebooks/Machine Learning Projects/Apple_Music_Analyzer.html" class="list-group-item list-group-item-action">Machine Learning Projects → Apple Music Analyzer</a>
-</div>
-<h2 class="mt-4">SQL</h2>
-<div class="list-group">
-    <a href="notebooks/SQL/How_To_Run_SQL_in_IPYNB.html" class="list-group-item list-group-item-action">SQL → How To Run SQL in IPYNB</a>
-</div>
-
-            </div>
-        </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+<script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js'></script>
+</body></html>
