--- a/notebooks/Machine Learning Projects/Apple_Music_Analyzer.html
+++ b/notebooks/Machine Learning Projects/Apple_Music_Analyzer.html
@@ -7507,7 +7507,7 @@ a.anchor-link {
     white-space: normal;
   }
 </style>
-<!-- End of mermaid configuration --><link rel="stylesheet" href="../dark_theme.css"></head>
+<!-- End of mermaid configuration --><link rel="stylesheet" href="../dark_theme.css"><script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script></head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 <main>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=0ce1b413-39c7-4189-a034-770aa6fcfa8c">
