--- a/notebooks/SQL/How_To_Run_SQL_in_IPYNB.html
+++ b/notebooks/SQL/How_To_Run_SQL_in_IPYNB.html
@@ -7507,7 +7507,7 @@ a.anchor-link {
     white-space: normal;
   }
 </style>
-<!-- End of mermaid configuration --><link rel="stylesheet" href="../dark_theme.css"></head>
+<!-- End of mermaid configuration --><link rel="stylesheet" href="../dark_theme.css"><script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script></head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 <main>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=3c70c0e5-c018-46c8-ae9b-9be29740b5a6">
